--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,96 @@
-/* You can add global styles to this file, and also import other style files */
+.navbar {
+	background-color: #f1f1f1;
+	color: #fff;
+	padding: 20px;
+}
+
+.navbar ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: space-around;
+}
+
+.navbar li {
+	
+	margin: 0 10px;
+}
+
+.navbar a {
+	color: black;
+	text-decoration: none;
+}
+
+.navbar a:hover {
+	text-decoration: underline;
+}
+
+.wrapper {
+	display: flex;
+}
+
+.div1 {
+    width: 100%;
+	height: 70vh;
+	flex: 3;
+	background-color: #f1f1f1;
+	padding: 20px;
+}
+
+.div2 {
+	flex: 1;
+	background-color: black;
+	padding: 20px;
+	color: #fff;
+}
+
+.divTexto{
+	width: 99%;
+	height: 40vh;
+	background-color: #f1f1f1;
+	padding: 20px;
+	color: #fff
+
+}
+
+
+
+.divTexto1, .divTexto2 {
+	display: inline-block;
+	width: 50%; /* puedes ajustar el ancho según tus necesidades */
+	vertical-align: top; /* alinear los elementos en la parte superior */
+  }
+
+
+
+.div3 {
+	flex: auto;
+	background-color:#f1f1f1;
+	padding: 20px;
+	height: 30vh;
+}
+
+.divp1, .divp2, .divp3{
+	display: inline-block; 
+	width: 30%; 
+	margin-right: 10px;
+}
+
+.img1, .img2, .img3{
+     width: 125px; 
+	 height: 180px; 
+	 float:left; 
+	 margin-right: 10px;
+}
+
+.readmore{
+	background-color: #ff8000;
+	color: white;
+	padding: 10px 20px;
+	border: none;
+	font-size: 16px;
+}
+
+
+
